test/libsolidity/syntaxTests/nameAndTypeResolution/165_assigning_state_to_const_variable.sol
contract C {
    address constant x = msg.sender;
}
// ----
// TypeError 8349: (38-48='msg.sender'): Initial value for constant variable has to be compile-time constant.
